# python-data-quality-framework

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
ERR/: customers_failed_records.csv  renewable_energy_share_2000_2025_failed_records.csv
RAW/: customers.csv
RAW/renewable_energy_kaggle/: renewable_energy_share_2000_2025.csv
config/: dq_config.json
src/data_quality/: __init__.py  checks.py  io.py  logging_utils.py  models.py  runner.py  validator.py
