[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-data-quality-framework"
version = "0.1.0"
description = "Config-driven data quality framework using Great Expectations and Pandas."
requires-python = ">=3.10"
dependencies = [
    "great_expectations>=1.3,<1.4",
    "pandas>=2.0,<3.0",
    "openpyxl>=3.1,<4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
